--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<!-- Your code here -->
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <!-- The head section contains information about the webpage -->
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>My Site Title</title>
+    <link rel="stylesheet" type="text/css" href="style.css" />
+  </head>
+  <body>
+    <h1>Welcome to My Site</h1>
+    <p>This is the beginning of my webpage content.</p>
+  </body>
+</html>
